Closed Bug 1707816 Opened 3 years ago Closed 3 years ago

widget/gtk/nsWindow.cpp:7930:6: error: #elif with no expression

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- unaffected
firefox89 --- unaffected
firefox90 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0

Steps to reproduce:

Solaris (no Wayland) build fails with:

19:03.84 /builds/psumbera/mozilla-central-build/widget/gtk/nsWindow.cpp:7930:6: error: #elif with no expression
19:03.84  7930 | #elif
19:03.84       |      ^

The first bad revision is:
changeset: 577493:3b393f95a2b4
user: Robert Mader <robert.mader@posteo.de>
date: Mon Apr 26 06:57:23 2021 -0700
description:
Bug 1707209 - [wayland] Implement experimental fractional scaling support, r=stransky

Keywords: regression
Regressed by: 1707209
Has Regression Range: --- → yes

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core

Robert, can you look at ti please?
Thanks.

Flags: needinfo?(robert.mader)
Priority: -- → P3
Assignee: nobody → petr.sumbera
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/d7dbd0167cae
widget/gtk/nsWindow.cpp:7930:6: error: #elif with no expression r=stransky

Oops - thanks for the quick fix!

Flags: needinfo?(robert.mader)

Set release status flags based on info from the regressing bug 1707209

Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: