Bug 1707816 - widget/gtk/nsWindow.cpp:7930:6: error: #elif with no expression r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D113484